# pyproject-init

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: clean.py
src/pyproject_init/: __about__.py  cli.py  pyproject_init.py
src/pyproject_init/templates/default/: cookiecutter.json
src/pyproject_init/templates/default/{{cookiecutter.project_slug}}/: README.md  pyproject.toml
src/pyproject_init/templates/default/{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __about__.py  main.py
tests/: test_clean.py  test_cli.py  test_pyproject_init.py
tests/pyproject_init/: __init__.py  test_cli.py
